--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "bugs": {
     "url": "https://github.com/masatonakatsuji2021/hachiware_fs/issues"
   },
-  "homepage": "https://github.com/masatonakatsuji2021/hachiware_fs#readme"
+  "homepage": "https://hachiware-js.com/"
 }
